samples/_failures_safe/1761468848_e5ef65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_163cf6fd.c: In function ‘main’:
./samples/SAFE/__tmp_163cf6fd.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("No input data\n");
      |         ^~~~~~
./samples/SAFE/__tmp_163cf6fd.c:139:9: error: expected declaration or statement at end of input
